force-app/force-app/force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <label>Service Request</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Service Ticket no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>