force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Closing_date__c.field-meta.xml
<CustomField>
    <fullName>Closing_date__c</fullName>
    <label>Sender Closing date</label>
    <type>Date</type>
</CustomField>