force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Customer_Reference_If_any__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_If_any__c</fullName>
    <label>Customer Reference (If any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>