force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Description_Brief__c.field-meta.xml
<CustomField>
    <fullName>Description_Brief__c</fullName>
    <label>Description Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>