force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/EDC__c.field-meta.xml
<CustomField>
    <fullName>EDC__c</fullName>
    <label>EDC</label>
    <type>Date</type>
</CustomField>