force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/From_Sender__c.field-meta.xml
<CustomField>
    <fullName>From_Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From (Sender)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>