force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Previous_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>Previous_Ticket_No__c</fullName>
    <label>Previous Ticket No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>