force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Recipient_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Closing_Date__c</fullName>
    <label>Recipient Closing Date</label>
    <type>Date</type>
</CustomField>