force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Response_from_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Response_from_Recipient__c</fullName>
    <label>Response from Recipient</label>
    <type>TextArea</type>
</CustomField>