force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <formula>From_Sender__r.FirstName  +  From_Sender__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sender Name</label>
    <type>Text</type>
</CustomField>