force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Start_End_No_of_days__c.field-meta.xml
<CustomField>
    <fullName>Start_End_No_of_days__c</fullName>
    <formula>Closing_date__c -  Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start-End - No of days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>