force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry related</fullName>
            </value>
            <value>
                <fullName>Quote review</fullName>
            </value>
            <value>
                <fullName>PO related</fullName>
            </value>
            <value>
                <fullName>Credit related</fullName>
            </value>
            <value>
                <fullName>Collection follow up</fullName>
            </value>
            <value>
                <fullName>Product Complaint</fullName>
            </value>
            <value>
                <fullName>Service Complaint</fullName>
            </value>
            <value>
                <fullName>Market info</fullName>
            </value>
            <value>
                <fullName>Competition Info</fullName>
            </value>
            <value>
                <fullName>Industry related</fullName>
            </value>
            <value>
                <fullName>Group related</fullName>
            </value>
            <value>
                <fullName>Customer data base</fullName>
            </value>
            <value>
                <fullName>Competitors presence</fullName>
            </value>
            <value>
                <fullName>Continual Improvement</fullName>
            </value>
            <value>
                <fullName>Trail tyre review</fullName>
            </value>
            <value>
                <fullName>New product development</fullName>
            </value>
            <value>
                <fullName>Next Purchase Plan - Month-Qty-Value</fullName>
            </value>
            <value>
                <fullName>CFB - Product</fullName>
            </value>
            <value>
                <fullName>CFB - Service</fullName>
            </value>
            <value>
                <fullName>Approval note</fullName>
            </value>
            <value>
                <fullName>Other info (Pl specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>