force-app/force-app/force-app/main/default/objects/Service_Request__c/fields/To_Recipient__c.field-meta.xml
<CustomField>
    <fullName>To_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To (Recipient)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Request</relationshipName>
    <type>Lookup</type>
</CustomField>