force-app/force-app/force-app/main/default/objects/Service_Request__c/validationRules/Recipient_Closing_Date_Field_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Recipient_Closing_Date_Field_Update</fullName>
    <active>true</active>
    <description>Only the Recipient user can edit this Recipient Closing Date Field</description>
    <errorConditionFormula>AND(NOT(OR ($User.Username = &apos;ajith.kumar@emerald.salesagent&apos; , $Profile.Name = &apos;System Administrator&apos;) ),ISCHANGED(Recipient_Closing_Date__c ))</errorConditionFormula>
    <errorMessage>Only the Recipient user can edit this Recipient Closing date</errorMessage>
</ValidationRule>