force-app/force-app/force-app/main/default/objects/Service_Request__c/validationRules/Recipient_Status_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Recipient_Status_edit</fullName>
    <active>true</active>
    <description>Only the Recipient User Can edit the Recipient Status field</description>
    <errorConditionFormula>AND(NOT( OR ($User.Username  = &apos;ajith.kumar@emerald.salesagent&apos; ,  $Profile.Name = &apos;System Administrator&apos;) ), ISCHANGED( Recipient_Status__c ) )</errorConditionFormula>
    <errorMessage>Only the Recipient User can edit this Recipient Status</errorMessage>
</ValidationRule>