force-app/force-app/force-app/main/default/objects/Service_Request__c/validationRules/Response_from_Recipient.validationRule-meta.xml
<ValidationRule>
    <fullName>Response_from_Recipient</fullName>
    <active>true</active>
    <description>Only the Recipient User can edit this Response from Recipient Field</description>
    <errorConditionFormula>AND(NOT(OR ($User.Username = &apos;ajith.kumar@emerald.salesagent&apos; , $Profile.Name = &apos;System Administrator&apos;) ),ISCHANGED( Response_from_Recipient__c  ))</errorConditionFormula>
    <errorMessage>Only the Recipient User can edit this Response From Recipient.</errorMessage>
</ValidationRule>