force-app/force-app/force-app/main/default/objects/Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>From_Sender__c</columns>
    <columns>To_Recipient__c</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Start_End_No_of_days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>