force-app/force-app/force-app/main/default/objects/Service_Request__c/listViews/My_Service_Requests.listView-meta.xml
<ListView>
    <fullName>My_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>From_Sender__c</columns>
    <columns>To_Recipient__c</columns>
    <columns>Start_End_No_of_days__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Service Requests</label>
</ListView>